2007-12-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8/oci8.rb: delete a private method
	    OCI8::Curosr#__connection and use @con instead.

2007-12-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: compile xmldb.o by default.
	* ext/oci8/lob.c, ext/oci8/metadata.c, ext/oci8/oci8.c: use
	    functions which ends with _nb instead of normal OCI functions
	    if they may block ruby itself. delete BUILD_FOR_ORACLE_* macros
	    and use have_OCI* instead.
	* ext/oci8/oci8.h: delete unused macros; BUILD_FOR_ORACLE_*,
	    Get_Int_With_Default, oci_rc2, oci_rc, and _D_.
	* ext/oci8/oci8lib.c, ext/oci8/oci8.c: change the default value
	    of executing_thread member in oci8_svcctx_t.
	* ext/oci8/xmldb.c: disabled for a while.

2007-12-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/apiwrap.h.tmpl, ext/oci8/apiwrap.rb:
	    change function declares of runtime-check.
	    add oracle_client_version.
	* ext/oci8/apiwrap.yml: add OCI function prototypes.
	* ext/oci8/extconf.rb: check oracle_client_version by existent functions
	    in OCI libraries. delete BUILD_FOR_ORACLE_VERSION_MAJOR and
	    BUILD_FOR_ORACLE_VERSION_MINOR macros. add ORACLE_CLIENT_VERSION.
	* ext/oci8/oci8.h: use ORACLE_CLIENT_VERSION instead of
	    BUILD_FOR_ORACLE_VERSION_MAJOR and BUILD_FOR_ORACLE_VERSION_MINOR
	    macros.
	* ext/oci8/ocidatetime.c: fix for ruby 1.8.
	* ext/oci8/tdo.c: delete an unused file.

2007-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl: move rboci_blocking_region() and
	    find_symbol() to ext/oci8/oci8lib.c and rename to
	    oci8_blocking_region() and oci8_find_symbol() respectively.
	* ext/oci8/bind.c: use RFLOAT_VALUE macro for ruby 1.9.
	* ext/oci8/oci8.h: define a macro RFLOAT_VALUE if it is not defined.
	    add prototypes oci8_blocking_region() and oci8_find_symbol().
	* ext/oci8/oci8lib.c: add oci8_blocking_region() and oci8_find_symbol().